@@ -5,11 +5,12 @@ Hadoop MapReduce Change Log
     MAPREDUCE-6213. NullPointerException caused by job history server addr not
     resolvable. (Peng Zhang via harsh)
 
-    MAPREDUCE-5649. Reduce cannot use more than 2G memory for the final merge
-    (Gera Shegalov via jlowe)
 
     MAPREDUCE-5465. Tasks are often killed before they exit on their own
     (Ming Ma via jlowe)
+
+    MAPREDUCE-5649. Reduce cannot use more than 2G memory for the final merge
+    (Gera Shegalov via jlowe)
 
     MAPREDUCE-5948. org.apache.hadoop.mapred.LineRecordReader does not handle
     multibyte record delimiters well (Vinayakumar B, Rushabh Shah, and Akira
@@ -21,6 +22,10 @@ Hadoop MapReduce Change Log
 
     MAPREDUCE-5982. Task attempts that fail from the ASSIGNED state can
     disappear (Chang Li via jlowe)
+
+    MAPREDUCE-6492. AsyncDispatcher exit with NPE on
+    TaskAttemptImpl#sendJHStartEventForAssignedFailTask (Bibin A Chundatt via
+    jlowe)
 
 Release 2.7.0 - 2015-04-20
   NEW FEATURES
